:art: 初始化回合制战斗模式;

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>pathfinding</module>
     <module>ranking</module>
+    <module>fighting</module>
   </modules>
 
   <dependencies>
